@@ -52,8 +52,6 @@ capplets/keyboard/gnome-keyboard-properties-xkbmc.c
 capplets/keyboard/gnome-keyboard-properties-xkbot.c
 capplets/keyboard/gnome-keyboard-properties-xkbpv.c
 capplets/keyboard/keyboard.desktop.in.in
-capplets/localization/localization.desktop.in.in
-capplets/localization/localization.glade
 capplets/mouse/gnome-mouse-accessibility.c
 capplets/mouse/gnome-mouse-properties.c
 capplets/mouse/gnome-mouse-properties.glade
@@ -81,9 +79,6 @@ libslab/system-tile.c
 libsounds/sound-view.c
 libwindow-settings/gnome-wm-manager.c
 libwindow-settings/metacity-window-manager.c
-schemas/apps_gnome_settings_daemon_default_editor.schemas.in
-schemas/apps_gnome_settings_daemon_keybindings.schemas.in
-schemas/apps_gnome_settings_daemon_screensaver.schemas.in
 shell/control-center.c
 shell/control-center.schemas.in
 shell/gnomecc.desktop.in.in
